# mixed-criticality-scheduler

./: .gitignore  CMakeLists.txt  README.md  script.md  script.sh
include/: cpu.h  scheduler.h  simulator.h  task.h
src/: cpu.cpp  main.cpp  scheduler.cpp  simulator.cpp
